--- a/TS-TODO/package.json
+++ b/TS-TODO/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch '*.ts' --exec 'ts-node' src/index.ts",
+    "start": "nodemon --watch *.ts --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "author": "",
